# wClub

./: .gitattributes  CHANGELOG.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  README_INSTALL.txt  app.json  app_info.json  demo_setup.md  pyproject.toml  requirements.txt  setup.py  site_config_template.json
.github/: copilot-instructions.md
.github/workflows/: validate-and-test.yml  validate.yml
docs/: api_reference.md  developer_guide.md  themes.html
frappe_app/: .gitignore  MANIFEST.in
frappe_app/wclub/: hooks.py  modules.txt
frappe_app/wclub/api/: booking.py
frappe_app/wclub/config/: docs.py
tools/: validate_marketplace.py
wclub/: after_install.py  api.py  belt_upgrade.py  hooks.py  modules.txt  patches.txt
wclub/api/: booking.py  booking_actions.py  kiosk.py  sessions.py  setup.py
wclub/config/: desktop.py  docs.py
wclub/doctype/attendance/: attendance.json  attendance.py
wclub/doctype/attendance_entry/: attendance_entry.json
wclub/doctype/belt_level/: belt_level.json
wclub/doctype/belt_rank/: belt_rank.json  belt_rank.py
wclub/doctype/belt_system/: belt_system.json
wclub/doctype/belt_upgrade/: belt_upgrade.json  belt_upgrade.py
wclub/doctype/booking/: booking.json
wclub/fixtures/: dashboard_chart.json  email_template.json  notification.json  reports.json  roles.json  seed_data.json  workflows.json  workspace.json  workspace_wclub.json
wclub/public/: portal_theme.css
wclub/scripts/: validator.py
wclub/tests/: test_apply_discount.py  test_belt_upgrade.py  test_install.py
wclub/translations/: ar.csv
(+53 files in other folders)
